# desktop-pet

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
public/assets/pets/default-cat/: pet.json
public/assets/pets/usagi-desk/: pet.json
scripts/: generate-pet-assets.mjs  tauri-windows-gnu.ps1
src/: App.css  App.tsx  index.css  petMachine.test.ts  petMachine.ts  petPack.ts  petScale.test.ts  petScale.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
