[package]
name = "desktop-pet"
version = "0.1.0"
description = "A tiny Windows desktop pet built with Tauri 2"
authors = ["Desktop Pet"]
edition = "2021"

[lib]
name = "desktop_pet_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
] }
